ui: fix content behind the app bar

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -83,7 +83,6 @@
 html,
 body {
   max-width: 100vw;
-  max-height: 100vh;
   overflow-x: hidden;
 }
 
